Сверстал header главной страницы

--- a/index.html
+++ b/index.html
@@ -1,12 +1,51 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Техномарт</title>
-  </head>
-  <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Техномарт</title>
+</head>
+<body>
+  <header class="main-header">
+    <div class="header-conteiner">
+      <a class="main-header-logo">
+        <img src="img/index-logo.svg" width="368" height="153" alt="Логотип Техномарт">
+      </a>
+    </div>
+    <form class="search">
+      <p><img src="search.svg" width="100" height="100" alt="Иконка поиска"></p>
+      <p><input type="search" name="q" placeholder="Поиск по сайту"></p>
+    </form>
+    <div class="bookmark-conteiner">
+      <p><img src="bookmark.svg" width="100" height="100" alt="Иконка закладки"></p>
+      <p>Закладки:0</p>
+    </div>
+    <div class="shopping cart-conteiner">
+      <p><img src="bookmark.svg" width="100" height="100" alt="Иконка закладки"></p>
+      <p>Закладки:0</p>
+    </div>
+    <div class="">
+      <p><img src="order.svg" width="100" height="100" alt="Оформить заказ"></p>
+    </div>
+    <div class="slogan-conteiner">
+      <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+    </div>
+    <div class="header-contacts">
+      <a href="#"><img src="contacts.svg" width="368" height="153" alt="+7 (812) 555-05-55"></a>
+      <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+    </div>
+    <ul class="user-navigation">
+      <li class="login-link"><a href="#"></a>Вход</li>
+      <li class="registration"><a href="#"></a>Регистрация</li>
+    </ul>
+    <nav class="main-navigation">
+      <ul class="site-navigation">
+        <li><a href="info.html">Информация</a></li>
+        <li><a href="news.html">Новости</a></li>
+        <li><a href="price.html">Прайс-лист</a></li>
+        <li><a href="catalog.html">Магазин</a></li>
+        <li><a href="contacts.html">Контакты</a></li>
+      </ul>
+    </nav>
+  </header>
+</body>
 </html>
