--- a/index.html
+++ b/index.html
@@ -47,5 +47,144 @@
       </ul>
     </nav>
   </header>
+  <main>
+    <section class="category">
+      <ul class="category-list">
+        <li class="category-item">Материалы</li>
+        <li class="category-item">Инструмент</li>
+        <li class="category-item">Техника</li>
+        <li class="category-item">Скидки</li>
+        <li class="category-item">Доставка</li>
+      </ul>
+    </section>
+    <asside class="gallery">
+      <figure class="gallery content">
+        <a href="#"><img src="img/studio.jpg" width="286" height="164" alt="Дрели соседям на радость"></a>
+        <p class="catalog-button"><a href="#"></a>Открыть каталог</p>
+      </figure>
+    </aside>
+    <div class="popular-items">
+      <p>Популярные товары</p>
+      <button class="all-popular-items" type="button" name="button">ВСЕ ПОПУЛЯРНЫЕ ТОВАРЫ</button>
+    </div>
+    <div class="product-item">
+      <img src="item_1.jpg">
+      <div class="product-list">
+        <h3>Перфоратор BOSCH <br>BFG 9000</h3>
+          <span class="old-price">32500 Р.</span>
+          <a href="#" class="new-price">25500 Р.</a>
+      </div>
+    </div>
+    <div class="product-item">
+      <img src="item_2.jpg">
+      <div class="product-list">
+        <h3>Перфоратор BOSCH<br>BFG 3000</h3>
+          <span class="old-price">25500 Р.</span>
+          <a href="#" class="new-price">15000 Р.</a>
+      </div>
+    </div>
+    <div class="product-item">
+      <img src="item_1.jpg">
+      <div class="product-list">
+        <h3>Перфоратор BOSCH <br>BFG 6000</h3>
+          <span class="old-price">30500 Р.</span>
+          <a href="#" class="new-price">25500 Р.</a>
+      </div>
+    </div>
+    <div class="new-product-item">
+      <img src="item_1.jpg">
+      <div class="product-list">
+        <h3>Перфоратор BOSCH <br>BFG 2000</h3>
+          <a href="#" class="new-price">25500 Р.</a>
+      </div>
+    </div>
+    <div class="popular-producers">
+      <p>Популярные производители:</p>
+      <button class="all-popular-items" type="button" name="button">ВСЕ ПОПУЛЯРНЫЕ ТОВАРЫ</button>
+    </div>
+    <section>
+      <ul class="producers">
+        <li><a href="#"><img src="" alt=""></a>Бош</li>
+        <li><a href="#"><img src="" alt=""></a>Митака</li>
+        <li><a href="#"><img src="" alt=""></a>Деволт</li>
+        <li><a href="#"><img src="" alt=""></a>Интеркол</li>
+        <li><a href="#"><img src="" alt=""></a>Хитачи</li>
+        <li><a href="#"><img src="" alt=""></a>Лджи</li>
+        <li><a href="#"><img src="" alt=""></a>Аег</li>
+        <li><a href="#"><img src="" alt=""></a>Метабо</li>
+      </ul>
+    </section>
+  </main>
+  <section class="servises">
+    <div class="servises-conteiner">
+      <ul class="servises-list">
+        <li class="servises-item">Доставка</li>
+        <li class="servises-item">Гарантия</li>
+        <li class="servises-item">Кредит</li>
+      </ul>
+    </div>
+    <div class="delivery">
+      <h2>Доставка</h2>
+      <p>Мы с удовольствием доставим ваш товар прямо
+<br>к вашему подъезду совершенно бесплатно!
+<br>Ведь мы неплохо заработаем,
+<br>поднимая его на ваш этаж!</p>
+    </div>
+  </section>
+  <section>
+    <div class="about us">
+        <h3>КОМПАНИЯ «Техномарт»</h3>
+      <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и <br>строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+      <p>Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:
+<ul class="transport">
+  <li>Деловые линии</li>
+  <li>Автотрейдинг</li>
+  <li>ЖелДорЭкспедиция</li>
+</ul>
+	</p>
+    <button class="all-popular-items" type="button" name="button">Подробнее о компании</button>
+    </div>
+  </section>
+    <section class="modal modal map">
+      <h3>Контакты</h3>
+      <p>Вы можете забрать товар сами,<br>заехав  в наш офис:</p>
+      <span class="model-close">x</span>
+  </section>
+  </main>
+  <footer>
+    <div class="fotter-logo">
+      <a href="#"><img src="tehnomart.svg" alt="Логотип магазина"></a>
+    </div>
+    <div class="contacts">
+      <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br>+7 (812) 555-05-55</p>
+    </div>
+    <div class="fotter-navigation">
+      <ul class="navigation-list">
+        <li class="navigation-item">Компания</li>
+        <li class="navigation-item">Новости</li>
+        <li class="navigation-item">Каталог</li>
+        <li class="navigation-item">Доставка</li>
+        <li class="navigation-item">Контакты</li>
+        <li class="navigation-item">Материалы</li>
+        <li class="navigation-item">Техника</li>
+        <li class="navigation-item">Инструмент</li>
+        <li class="navigation-item">Спецпредложения</li>
+      </ul>
+    </div>
+    <div class="copyright">
+      <p>© 2010–2019 Компания «Техномарт» <br>Все права защищены</p>
+    </div>
+    <div class="social">
+      <ul class="sosial-list">
+        <li><a href="#">Вконтакте</a></li>
+        <li><a href="#">Фэйсбук</a></li>
+        <li><a href="#">Инстаграм</a></li>
+      </ul>
+    </div>
+    <b>Обратная связь:</b>
+    <a class="feedback" href="mail@htmlacademy.ru">HTML Academy</a>
+    <b>Разработано:</b>
+    <a class="create" href="https://htmlacademy.ru">HTML Academy</a>
+  </footer>
 </body>
 </html>
