--- a/index.html
+++ b/index.html
@@ -71,31 +71,31 @@
       <img src="item_1.jpg">
       <div class="product-list">
         <h3>Перфоратор BOSCH <br>BFG 9000</h3>
-          <span class="old-price">32500 Р.</span>
-          <a href="#" class="new-price">25500 Р.</a>
+        <span class="old-price">32500 Р.</span>
+        <a href="#" class="new-price">25500 Р.</a>
       </div>
     </div>
     <div class="product-item">
       <img src="item_2.jpg">
       <div class="product-list">
         <h3>Перфоратор BOSCH<br>BFG 3000</h3>
-          <span class="old-price">25500 Р.</span>
-          <a href="#" class="new-price">15000 Р.</a>
+        <span class="old-price">25500 Р.</span>
+        <a href="#" class="new-price">15000 Р.</a>
       </div>
     </div>
     <div class="product-item">
       <img src="item_1.jpg">
       <div class="product-list">
         <h3>Перфоратор BOSCH <br>BFG 6000</h3>
-          <span class="old-price">30500 Р.</span>
-          <a href="#" class="new-price">25500 Р.</a>
+        <span class="old-price">30500 Р.</span>
+        <a href="#" class="new-price">25500 Р.</a>
       </div>
     </div>
     <div class="new-product-item">
       <img src="item_1.jpg">
       <div class="product-list">
         <h3>Перфоратор BOSCH <br>BFG 2000</h3>
-          <a href="#" class="new-price">25500 Р.</a>
+        <a href="#" class="new-price">25500 Р.</a>
       </div>
     </div>
     <div class="popular-producers">
@@ -126,30 +126,30 @@
     <div class="delivery">
       <h2>Доставка</h2>
       <p>Мы с удовольствием доставим ваш товар прямо
-<br>к вашему подъезду совершенно бесплатно!
-<br>Ведь мы неплохо заработаем,
-<br>поднимая его на ваш этаж!</p>
-    </div>
-  </section>
-  <section>
-    <div class="about us">
+        <br>к вашему подъезду совершенно бесплатно!
+        <br>Ведь мы неплохо заработаем,
+        <br>поднимая его на ваш этаж!</p>
+      </div>
+    </section>
+    <section>
+      <div class="about us">
         <h3>КОМПАНИЯ «Техномарт»</h3>
-      <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и <br>строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
-      <p>Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:
-<ul class="transport">
-  <li>Деловые линии</li>
-  <li>Автотрейдинг</li>
-  <li>ЖелДорЭкспедиция</li>
-</ul>
-	</p>
-    <button class="all-popular-items" type="button" name="button">Подробнее о компании</button>
-    </div>
-  </section>
+        <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и <br>строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+        <p>Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:
+          <ul class="transport">
+            <li>Деловые линии</li>
+            <li>Автотрейдинг</li>
+            <li>ЖелДорЭкспедиция</li>
+          </ul>
+        </p>
+        <button class="all-popular-items" type="button" name="button">Подробнее о компании</button>
+      </div>
+    </section>
     <section class="modal modal map">
       <h3>Контакты</h3>
       <p>Вы можете забрать товар сами,<br>заехав  в наш офис:</p>
       <span class="model-close">x</span>
-  </section>
+    </section>
   </main>
   <footer>
     <div class="fotter-logo">
@@ -160,15 +160,15 @@
     </div>
     <div class="fotter-navigation">
       <ul class="navigation-list">
-        <li class="navigation-item">Компания</li>
-        <li class="navigation-item">Новости</li>
-        <li class="navigation-item">Каталог</li>
-        <li class="navigation-item">Доставка</li>
-        <li class="navigation-item">Контакты</li>
-        <li class="navigation-item">Материалы</li>
-        <li class="navigation-item">Техника</li>
-        <li class="navigation-item">Инструмент</li>
-        <li class="navigation-item">Спецпредложения</li>
+        <li class="fotter-navigation-item">Компания</li>
+        <li class="fotter-navigation-item">Новости</li>
+        <li class="fotter-navigation-item">Каталог</li>
+        <li class="fotter-navigation-item">Доставка</li>
+        <li class="fotter-navigation-item">Контакты</li>
+        <li class="fotter-navigation-item">Материалы</li>
+        <li class="fotter-navigation-item">Техника</li>
+        <li class="fotter-navigation-item">Инструмент</li>
+        <li class="fotter-navigation-item">Спецпредложения</li>
       </ul>
     </div>
     <div class="copyright">
