--- a/catalog.html
+++ b/catalog.html
@@ -41,16 +41,199 @@
     </nav>
   </header>
 
-<main>
-  <ul class="site-tree-list">
-    <li class="site-tree-item"><a href="#">Каталог</a></li>
-    <li class="site-tree-item"><a href="#">Инструмент</a></li>
-    <li class="site-tree-item"><a href="#">Перфораторы</a></li>
-  </ul>
-  <section>
-    <div class="filter">
+  <main>
+    <ul class="site-tree-list">
+      <li class="site-tree-item"><a href="#">Каталог</a></li>
+      <li class="site-tree-item"><a href="#">Инструмент</a></li>
+      <li class="site-tree-item"><a href="#">Перфораторы</a></li>
+    </ul>
+    <div class="product-header">
+      <h2>Перфораторы</h2>
     </div>
-    <div class="sort">
+    <section>
+      <div class="filter">
+        <div class="prise-range-slider">
+          <!--Здесь будет слайдер-->
+        </div>
+        <ul class="produsers-selection-list">
+          <li class="produsers-selection-item">BOSCH</li>
+          <li class="produsers-selection-item">ИНТЕРСКОЛ</li>
+          <li class="produsers-selection-item">MAKIta</li>
+          <li class="produsers-selection-item">Dewalt</li>
+          <li class="produsers-selection-item">Hitachi</li>
+        </ul>
+        <ul class="power-choice-list">
+          <li class="power-choice-item">Аккумуляторные</li>
+          <li class="power-choice-item">Сетевые</li>
+        </ul>
+        <a href="#">Показать</a>
+      </div>
+      <div class="sort">
+        <ul class="sort-parametres-list">
+          <li class="sort-parametres-item"><a href="#">По цене</a></li>
+          <li class="sort-parametres-item"><a href="#">По типу</a></li>
+          <li class="sort-parametres-item"><a href="#">По функционалу</a></li>
+        </ul>
+        <ul class="product-list">
+          <li class="product-list-item">
+            <img src="item1.jpg" alt="Картинка перфоратора">
+            <a href="#">
+              <h3 class="product-name">Перфоратор BOSCH BFG 3000</h3>
+            </a>
+            <p class="old price">22500 Р.</p>
+            <a href="#">
+              <p class="new price">15500 Р.</p>
+            </a>
+            <a href="#">Купить</a>
+            <a href="#">В закладки</a>
+          </li>
+          <li class="product-list-item">
+            <img src="item1.jpg" alt="Картинка перфоратора">
+            <a href="#">
+              <h3 class="product-name">Перфоратор BOSCH BFG 6000</h3>
+            </a>
+            <p class="old price">30500 Р.</p>
+            <a href="#">
+              <p class="new price">25500 Р.</p>
+            </a>
+            <a href="#">Купить</a>
+            <a href="#">В закладки</a>
+          </li>
+          <li class="product-list-item">
+            <img src="item1.jpg" alt="Картинка перфоратора">
+            <a href="#">
+              <h3 class="product-name">Перфоратор BOSCH BFG 2000</h3>
+            </a>
+            <a href="#">
+              <p class="new price">12500 Р.</p>
+            </a>
+            <a href="#">Купить</a>
+            <a href="#">В закладки</a>
+          </li>
+          <li class="product-list-item">
+            <img src="item1.jpg" alt="Картинка перфоратора">
+            <a href="#">
+              <h3 class="product-name">Перфоратор BOSCH BFG 3000</h3>
+            </a>
+            <p class="old price">22500 Р.</p>
+            <a href="#">
+              <p class="new price">15500 Р.</p>
+            </a>
+            <a href="#">Купить</a>
+            <a href="#">В закладки</a>
+          </li>
+          <li class="product-list-item">
+            <img src="item1.jpg" alt="Картинка перфоратора">
+            <a href="#">
+              <h3 class="product-name">Перфоратор BOSCH BFG 6000</h3>
+            </a>
+            <p class="old price">30500 Р.</p>
+            <a href="#">
+              <p class="new price">25500 Р.</p>
+            </a>
+            <a href="#">Купить</a>
+            <a href="#">В закладки</a>
+          </li>
+          <li class="product-list-item">
+            <img src="item1.jpg" alt="Картинка перфоратора">
+            <a href="#">
+              <h3 class="product-name">Перфоратор BOSCH BFG 2000</h3>
+            </a>
+            <a href="#">
+              <p class="new price">12500 Р.</p>
+            </a>
+            <a href="#">Купить</a>
+            <a href="#">В закладки</a>
+          </li>
+          <li class="product-list-item">
+            <img src="item1.jpg" alt="Картинка перфоратора">
+            <a href="#">
+              <h3 class="product-name">Перфоратор BOSCH BFG 3000</h3>
+            </a>
+            <p class="old price">22500 Р.</p>
+            <a href="#">
+              <p class="new price">15500 Р.</p>
+            </a>
+            <a href="#">Купить</a>
+            <a href="#">В закладки</a>
+          </li>
+          <li class="product-list-item">
+            <img src="item1.jpg" alt="Картинка перфоратора">
+            <a href="#">
+              <h3 class="product-name">Перфоратор BOSCH BFG 6000</h3>
+            </a>
+            <p class="old price">30500 Р.</p>
+            <a href="#">
+              <p class="new price">25500 Р.</p>
+            </a>
+            <a href="#">Купить</a>
+            <a href="#">В закладки</a>
+          </li>
+          <li class="product-list-item">
+            <img src="item1.jpg" alt="Картинка перфоратора">
+            <a href="#">
+              <h3 class="product-name">Перфоратор BOSCH BFG 2000</h3>
+            </a>
+            <a href="#">
+              <p class="new price">12500 Р.</p>
+            </a>
+            <a href="#">Купить</a>
+            <a href="#">В закладки</a>
+          </li>
+        </ul>
+        <ul class="catalog-navigation-list">
+          <li class="catalog-navigation-item"><a href="#">1</a></li>
+          <li class="catalog-navigation-item"><a href="#">2</a></li>
+          <li class="catalog-navigation-item"><a href="#">3</a></li>
+          <li class="next-button"><a href="#">Следующая</a></li>
+        </ul>
+      </div>
+    </section>
+    <div class="about-drill">
+      <h2>ПАРА СЛОВ О ПЕРФОРАТОРАХ</h2>
+      <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.<br>
+        Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка.
+        В <br>ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
     </div>
-  </section>
-</main>
+  </main>
+
+  <footer>
+    <div class="footer-logo">
+      <a href="#"><img src="img/index-logo.svg" width="368" height="153" alt="Логотип Техномарт"></a>
+      <address class="store-address">
+        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+      </address>
+      <p>+7 (812) 555-05-55</p>
+    </div>
+    <ul class="foter-navigation-list">
+      <li class="foter-navigation-item"><a href="#">Компания</a></li>
+      <li class="foter-navigation-item"><a href="#">Новости</a></li>
+      <li class="foter-navigation-item"><a href="#">Каталог</a></li>
+      <li class="foter-navigation-item"><a href="#">Доставка</a></li>
+      <li class="foter-navigation-item"><a href="#">Контакты</a></li>
+    </ul>
+    <ul class="footer-category-list">
+      <li class="footer-category-item"><a href="#">Материалы</a></li>
+      <li class="footer-category-item"><a href="#">Техника</a></li>
+      <li class="footer-category-item"><a href="#">Инструмент</a></li>
+      <li class="footer-category-item"><a href="#">Спецпредложения</a></li>
+    </ul>
+    <div class="copyright">
+      <p>© 2010–2019 Компания «Техномарт» <br>Все права защищены</p>
+    </div>
+    <ul class="sosial-list">
+      <li><a href="#">Вконтакте</a></li>
+      <li><a href="#">Фэйсбук</a></li>
+      <li><a href="#">Инстаграм</a></li>
+    </ul>
+    <div class="site-information">
+      <b>Обратная связь:</b>
+      <a class="feedback" href="mail@htmlacademy.ru">HTML Academy</a>
+      <b>Разработано:</b>
+      <a class="create" href="https://htmlacademy.ru">HTML Academy</a>
+    </div>
+  </footer>
+
+</body>
+
+</html>
