--- a/catalog.html
+++ b/catalog.html
@@ -8,9 +8,11 @@
 
 <body>
   <header class="main-header">
-    <div class="header-top">
-      <div class="site-logo">
-        <a href="#"><img src="img/index-logo.svg" width="368" height="153" alt="Логотип Техномарт"></a>
+    <div class="header-top-wrapper">
+      <div class="header-logo">
+        <a href="#"><img src="img/index-logo.png" width="220px" height="47px" alt="Логотип Техномарт"></a>
+      </div>
+      <div class="search-form">
         <!--Тут будет форма поиска-->
       </div>
       <ul class="order-interface">
@@ -19,12 +21,12 @@
         <li class="order-button"><a href="#">Оформить заказ</a></li>
       </ul>
     </div>
-    <div class="header-middle">
-      <h1>Интернет-магазин <br> строительных материалов <br> и инструментов для ремонта</h1>
-      <b>+7 (812) 555-05-55</b>
-      <address class="store-address">
+    <div class="header-middle-wrapper">
+      <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+      <div class="address">
+        <b>+7 (812) 555-05-55</b>
         <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-      </address>
+      </div>
       <ul class="user-navigation">
         <li class="login-link"><a href="#"></a>Вход</li>
         <li class="registration"><a href="#"></a>Регистрация</li>
@@ -42,10 +44,10 @@
   </header>
 
   <main>
-    <ul class="site-tree-list">
-      <li class="site-tree-item"><a href="#">Каталог</a></li>
-      <li class="site-tree-item"><a href="#">Инструмент</a></li>
-      <li class="site-tree-item"><a href="#">Перфораторы</a></li>
+    <ul class="breadcrumbs-list">
+      <li class="breadcrumbs-item"><a href="#">Каталог</a></li>
+      <li class="breadcrumbs-item"><a href="#">Инструмент</a></li>
+      <li class="breadcrumbs-item"><a href="#">Перфораторы</a></li>
     </ul>
     <div class="product-header">
       <h2>Перфораторы</h2>
@@ -69,116 +71,101 @@
         <a href="#">Показать</a>
       </div>
       <div class="sort">
+        <h2>Сортировка</h2>
         <ul class="sort-parametres-list">
           <li class="sort-parametres-item"><a href="#">По цене</a></li>
           <li class="sort-parametres-item"><a href="#">По типу</a></li>
           <li class="sort-parametres-item"><a href="#">По функционалу</a></li>
+          <li class="sort-parametres-item"><a href="#">Стрелка1</a></li>
+          <li class="sort-parametres-item"><a href="#">Стрелка2</a></li>
         </ul>
         <ul class="product-list">
           <li class="product-list-item">
             <img src="item1.jpg" alt="Картинка перфоратора">
-            <a href="#">
-              <h3 class="product-name">Перфоратор BOSCH BFG 3000</h3>
-            </a>
+            <a href="#"><h3 class="product-name">Перфоратор Bosch bfg 3000</h3></a>
             <p class="old price">22500 Р.</p>
-            <a href="#">
-              <p class="new price">15500 Р.</p>
-            </a>
-            <a href="#">Купить</a>
-            <a href="#">В закладки</a>
+            <p><a href="#">15500 Р.</a></p>
+            <div class="add product">
+              <p><a href="#">Купить</a></p>
+              <p><a href="#">В закладки</a></p>
+            </div>
           </li>
           <li class="product-list-item">
             <img src="item1.jpg" alt="Картинка перфоратора">
-            <a href="#">
-              <h3 class="product-name">Перфоратор BOSCH BFG 6000</h3>
-            </a>
+            <a href="#"><h3 class="product-name">Перфоратор Bosch bfg 6000</h3></a>
             <p class="old price">30500 Р.</p>
-            <a href="#">
-              <p class="new price">25500 Р.</p>
-            </a>
-            <a href="#">Купить</a>
-            <a href="#">В закладки</a>
+            <p><a href="#">25500 Р.</a></p>
+            <div class="add product">
+              <p><a href="#">Купить</a></p>
+              <p><a href="#">В закладки</a></p>
+            </div>
           </li>
           <li class="product-list-item">
             <img src="item1.jpg" alt="Картинка перфоратора">
-            <a href="#">
-              <h3 class="product-name">Перфоратор BOSCH BFG 2000</h3>
-            </a>
-            <a href="#">
-              <p class="new price">12500 Р.</p>
-            </a>
-            <a href="#">Купить</a>
-            <a href="#">В закладки</a>
+            <a href="#"><h3 class="product-name">Перфоратор Bosch bfg 2000</h3></a>
+            <p><a href="#">12500 Р.</a></p>
+            <div class="add product">
+              <p><a href="#">Купить</a></p>
+              <p><a href="#">В закладки</a></p>
+            </div>
           </li>
           <li class="product-list-item">
             <img src="item1.jpg" alt="Картинка перфоратора">
-            <a href="#">
-              <h3 class="product-name">Перфоратор BOSCH BFG 3000</h3>
-            </a>
+            <a href="#"><h3 class="product-name">Перфоратор Bosch bfg 3000</h3></a>
             <p class="old price">22500 Р.</p>
-            <a href="#">
-              <p class="new price">15500 Р.</p>
-            </a>
-            <a href="#">Купить</a>
-            <a href="#">В закладки</a>
+            <p><a href="#">15500 Р.</a></p>
+            <div class="add product">
+              <p><a href="#">Купить</a></p>
+              <p><a href="#">В закладки</a></p>
+            </div>
           </li>
           <li class="product-list-item">
             <img src="item1.jpg" alt="Картинка перфоратора">
-            <a href="#">
-              <h3 class="product-name">Перфоратор BOSCH BFG 6000</h3>
-            </a>
+            <a href="#"><h3 class="product-name">Перфоратор Bosch bfg 6000</h3></a>
             <p class="old price">30500 Р.</p>
-            <a href="#">
-              <p class="new price">25500 Р.</p>
-            </a>
-            <a href="#">Купить</a>
-            <a href="#">В закладки</a>
+            <p><a href="#">25500 Р.</a></p>
+            <div class="add product">
+              <p><a href="#">Купить</a></p>
+              <p><a href="#">В закладки</a></p>
+            </div>
           </li>
           <li class="product-list-item">
             <img src="item1.jpg" alt="Картинка перфоратора">
-            <a href="#">
-              <h3 class="product-name">Перфоратор BOSCH BFG 2000</h3>
-            </a>
-            <a href="#">
-              <p class="new price">12500 Р.</p>
-            </a>
-            <a href="#">Купить</a>
-            <a href="#">В закладки</a>
+            <a href="#"><h3 class="product-name">Перфоратор Bosch bfg 2000</h3></a>
+            <p><a href="#">12500 Р.</a></p>
+            <div class="add product">
+              <p><a href="#">Купить</a></p>
+              <p><a href="#">В закладки</a></p>
+            </div>
           </li>
           <li class="product-list-item">
             <img src="item1.jpg" alt="Картинка перфоратора">
-            <a href="#">
-              <h3 class="product-name">Перфоратор BOSCH BFG 3000</h3>
-            </a>
+            <a href="#"><h3 class="product-name">Перфоратор Bosch bfg 3000</h3></a>
             <p class="old price">22500 Р.</p>
-            <a href="#">
-              <p class="new price">15500 Р.</p>
-            </a>
-            <a href="#">Купить</a>
-            <a href="#">В закладки</a>
+            <p><a href="#">15500 Р.</a></p>
+            <div class="add product">
+              <p><a href="#">Купить</a></p>
+              <p><a href="#">В закладки</a></p>
+            </div>
           </li>
           <li class="product-list-item">
             <img src="item1.jpg" alt="Картинка перфоратора">
-            <a href="#">
-              <h3 class="product-name">Перфоратор BOSCH BFG 6000</h3>
-            </a>
+            <a href="#"><h3 class="product-name">Перфоратор Bosch bfg 6000</h3></a>
             <p class="old price">30500 Р.</p>
-            <a href="#">
-              <p class="new price">25500 Р.</p>
-            </a>
-            <a href="#">Купить</a>
-            <a href="#">В закладки</a>
+            <p><a href="#">25500 Р.</a></p>
+            <div class="add product">
+              <p><a href="#">Купить</a></p>
+              <p><a href="#">В закладки</a></p>
+            </div>
           </li>
           <li class="product-list-item">
             <img src="item1.jpg" alt="Картинка перфоратора">
-            <a href="#">
-              <h3 class="product-name">Перфоратор BOSCH BFG 2000</h3>
-            </a>
-            <a href="#">
-              <p class="new price">12500 Р.</p>
-            </a>
-            <a href="#">Купить</a>
-            <a href="#">В закладки</a>
+            <a href="#"><h3 class="product-name">Перфоратор Bosch bfg 2000</h3></a>
+            <p><a href="#">12500 Р.</a></p>
+            <div class="add product">
+              <p><a href="#">Купить</a></p>
+              <p><a href="#">В закладки</a></p>
+            </div>
           </li>
         </ul>
         <ul class="catalog-navigation-list">
@@ -190,48 +177,46 @@
       </div>
     </section>
     <div class="about-drill">
-      <h2>ПАРА СЛОВ О ПЕРФОРАТОРАХ</h2>
-      <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.<br>
+      <h2>Пара слов о перфораторах</h2>
+      <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.
         Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка.
-        В <br>ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
+        В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
     </div>
   </main>
 
   <footer>
     <div class="footer-logo">
-      <a href="#"><img src="img/index-logo.svg" width="368" height="153" alt="Логотип Техномарт"></a>
-      <address class="store-address">
-        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-      </address>
-      <p>+7 (812) 555-05-55</p>
+      <a href="#"><img src="img/fotter-logo.png" width="220px" height="68px" alt="Логотип Техномарт"></a>
+      <ul class="foter-navigation-list">
+        <li class="footer-navigation-item"><a href="#">Компания</a></li>
+        <li class="footer-navigation-item"><a href="#">Новости</a></li>
+        <li class="footer-navigation-item"><a href="#">Каталог</a></li>
+        <li class="footer-navigation-item"><a href="#">Доставка</a></li>
+        <li class="footer-navigation-item"><a href="#">Контакты</a></li>
+      </ul>
     </div>
-    <ul class="foter-navigation-list">
-      <li class="foter-navigation-item"><a href="#">Компания</a></li>
-      <li class="foter-navigation-item"><a href="#">Новости</a></li>
-      <li class="foter-navigation-item"><a href="#">Каталог</a></li>
-      <li class="foter-navigation-item"><a href="#">Доставка</a></li>
-      <li class="foter-navigation-item"><a href="#">Контакты</a></li>
-    </ul>
-    <ul class="footer-category-list">
-      <li class="footer-category-item"><a href="#">Материалы</a></li>
-      <li class="footer-category-item"><a href="#">Техника</a></li>
-      <li class="footer-category-item"><a href="#">Инструмент</a></li>
-      <li class="footer-category-item"><a href="#">Спецпредложения</a></li>
-    </ul>
+    <div class="address">
+      <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7 (812) 555-05-55</p>
+      <ul class="footer-category-list">
+        <li class="footer-category-item"><a href="#">Материалы</a></li>
+        <li class="footer-category-item"><a href="#">Техника</a></li>
+        <li class="footer-category-item"><a href="#">Инструмент</a></li>
+        <li class="footer-category-item"><a href="#">Спецпредложения</a></li>
+      </ul>
+    </div>
     <div class="copyright">
-      <p>© 2010–2019 Компания «Техномарт» <br>Все права защищены</p>
-    </div>
-    <ul class="sosial-list">
-      <li><a href="#">Вконтакте</a></li>
-      <li><a href="#">Фэйсбук</a></li>
-      <li><a href="#">Инстаграм</a></li>
-    </ul>
-    <div class="site-information">
-      <b>Обратная связь:</b>
-      <a class="feedback" href="mail@htmlacademy.ru">HTML Academy</a>
-      <b>Разработано:</b>
-      <a class="create" href="https://htmlacademy.ru">HTML Academy</a>
-    </div>
+      <p>© 2010–2019 Компания «Техномарт» Все права защищены</p>
+      <ul class="social-list">
+        <li><a href="#">Вконтакте</a></li>
+        <li><a href="#">Фэйсбук</a></li>
+        <li><a href="#">Инстаграм</a></li>
+      </ul>
+      <div class="site-information">
+        <b>Обратная связь:</b>
+        <a class="feedback" href="mail@htmlacademy.ru">HTML Academy</a>
+        <b>Разработано:</b>
+        <a class="create" href="https://htmlacademy.ru">HTML Academy</a>
+      </div>
   </footer>
 
 </body>
