Final changes in index and catalog

--- a/catalog.html
+++ b/catalog.html
@@ -217,6 +217,7 @@
         <b>Разработано:</b>
         <a class="create" href="https://htmlacademy.ru">HTML Academy</a>
       </div>
+    </div>
   </footer>
 
 </body>
