--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
         <b>Разработано:</b>
         <a class="create" href="https://htmlacademy.ru">HTML Academy</a>
       </div>
+    </div>
   </footer>
 
 </body>
