Добавил контентные изображения

--- a/catalog.html
+++ b/catalog.html
@@ -81,7 +81,7 @@
         </ul>
         <ul class="product-list">
           <li class="product-list-item">
-            <img src="item1.jpg" alt="Картинка перфоратора">
+            <img src="img/Perforator_1.jpg" alt="Картинка перфоратора">
             <a href="#"><h3 class="product-name">Перфоратор Bosch bfg 3000</h3></a>
             <p class="old price">22500 Р.</p>
             <p><a href="#">15500 Р.</a></p>
@@ -91,7 +91,7 @@
             </div>
           </li>
           <li class="product-list-item">
-            <img src="item1.jpg" alt="Картинка перфоратора">
+            <img src="img/Perforator_2.jpg" alt="Картинка перфоратора">
             <a href="#"><h3 class="product-name">Перфоратор Bosch bfg 6000</h3></a>
             <p class="old price">30500 Р.</p>
             <p><a href="#">25500 Р.</a></p>
@@ -101,7 +101,7 @@
             </div>
           </li>
           <li class="product-list-item">
-            <img src="item1.jpg" alt="Картинка перфоратора">
+            <img src="img/Perforator_3.jpg" alt="Картинка перфоратора">
             <a href="#"><h3 class="product-name">Перфоратор Bosch bfg 2000</h3></a>
             <p><a href="#">12500 Р.</a></p>
             <div class="add product">
@@ -110,7 +110,7 @@
             </div>
           </li>
           <li class="product-list-item">
-            <img src="item1.jpg" alt="Картинка перфоратора">
+            <img src="img/Perforator_1.jpg" alt="Картинка перфоратора">
             <a href="#"><h3 class="product-name">Перфоратор Bosch bfg 3000</h3></a>
             <p class="old price">22500 Р.</p>
             <p><a href="#">15500 Р.</a></p>
@@ -120,7 +120,7 @@
             </div>
           </li>
           <li class="product-list-item">
-            <img src="item1.jpg" alt="Картинка перфоратора">
+            <img src="img/Perforator_2.jpg" alt="Картинка перфоратора">
             <a href="#"><h3 class="product-name">Перфоратор Bosch bfg 6000</h3></a>
             <p class="old price">30500 Р.</p>
             <p><a href="#">25500 Р.</a></p>
@@ -130,7 +130,7 @@
             </div>
           </li>
           <li class="product-list-item">
-            <img src="item1.jpg" alt="Картинка перфоратора">
+            <img src="img/Perforator_3.jpg" alt="Картинка перфоратора">
             <a href="#"><h3 class="product-name">Перфоратор Bosch bfg 2000</h3></a>
             <p><a href="#">12500 Р.</a></p>
             <div class="add product">
@@ -139,7 +139,7 @@
             </div>
           </li>
           <li class="product-list-item">
-            <img src="item1.jpg" alt="Картинка перфоратора">
+            <img src="img/Perforator_1.jpg" alt="Картинка перфоратора">
             <a href="#"><h3 class="product-name">Перфоратор Bosch bfg 3000</h3></a>
             <p class="old price">22500 Р.</p>
             <p><a href="#">15500 Р.</a></p>
@@ -149,7 +149,7 @@
             </div>
           </li>
           <li class="product-list-item">
-            <img src="item1.jpg" alt="Картинка перфоратора">
+            <img src="img/Perforator_2.jpg" alt="Картинка перфоратора">
             <a href="#"><h3 class="product-name">Перфоратор Bosch bfg 6000</h3></a>
             <p class="old price">30500 Р.</p>
             <p><a href="#">25500 Р.</a></p>
@@ -159,7 +159,7 @@
             </div>
           </li>
           <li class="product-list-item">
-            <img src="item1.jpg" alt="Картинка перфоратора">
+            <img src="img/Perforator_3.jpg" alt="Картинка перфоратора">
             <a href="#"><h3 class="product-name">Перфоратор Bosch bfg 2000</h3></a>
             <p><a href="#">12500 Р.</a></p>
             <div class="add product">
