--- a/index.html
+++ b/index.html
@@ -68,7 +68,12 @@
         </li>
       </ul>
       <ul class="catalog-list">
-        <li class="catalog-item"><a href="#">Элемент каталога 1</a></li>
+        <li class="catalog-item">
+          <h2>Дрели всем на радость</h2>
+          <a href="#">Элемент каталога 1
+            <img src="img/drill-baner.jpg" alt="Банер">
+          </a>
+        </li>
         <li class="catalog-item"><a href="#">Элемент каталога 2</a></li>
         <li class="catalog-button"><a href="#">Открыть каталог</a></li>
       </ul>
@@ -80,7 +85,7 @@
       </div>
       <ul class="popular-goods-list">
         <li class="product-goods-item">
-          <img src="item1.jpg" alt="Картинка перфоратора">
+          <img src="img/Perforator_1.jpg" alt="Картинка перфоратора">
           <a href="#"><h3 class="product-name">Перфоратор Bosch bfg 9000</h3></a>
           <p class="old price">32500 Р.</p>
           <p><a href="#">25500 Р.</a></p>
@@ -90,7 +95,7 @@
           </div>
         </li>
         <li class="product-goods-item">
-          <img src="item1.jpg" alt="Картинка перфоратора">
+          <img src="img/Perforator_2.jpg" alt="Картинка перфоратора">
           <a href="#"><h3 class="product-name">Перфоратор Bosch bfg 3000</h3></a>
           <p class="old price">22500 Р.</p>
           <p><a href="#">15500 Р.</a></p>
@@ -100,7 +105,7 @@
           </div>
         </li>
         <li class="product-goods-item">
-          <img src="item1.jpg" alt="Картинка перфоратора">
+          <img src="img/Perforator_3.jpg" alt="Картинка перфоратора">
           <a href="#"><h3 class="product-name">Перфоратор Bosch bfg 6000</h3></a>
           <p class="old price">30500 Р.</p>
           <p><a href="#">22500 Р.</a></p>
@@ -110,7 +115,7 @@
           </div>
         </li>
         <li class="product-goods-item">
-          <img src="item1.jpg" alt="Картинка перфоратора">
+          <img src="img/Perforator_4.jpg" alt="Картинка перфоратора">
           <a href="#"><h3 class="product-name">Перфоратор Bosch bfg 2000</h3></a>
           <p><a href="#">12500 Р.</a></p>
           <div class="add product">
@@ -126,14 +131,14 @@
         <a href="#">Все производители:</a>
       </div>
       <ul class="popular-producers-list">
-        <li class="popular-producers-items"><a href="#"><img src="" alt="BOSCH"></a></li>
-        <li class="popular-producers-items"><a href="#"><img src="" alt="makita"></a></li>
-        <li class="popular-producers-items"><a href="#"><img src="" alt="dewalt"></a></li>
-        <li class="popular-producers-items"><a href="#"><img src="" alt="интерскол"></a></li>
-        <li class="popular-producers-items"><a href="#"><img src="" alt="hitachi"></a></li>
-        <li class="popular-producers-items"><a href="#"><img src="" alt="LG"></a></li>
-        <li class="popular-producers-items"><a href="#"><img src="" alt="AEG"></a></li>
-        <li class="popular-producers-items"><a href="#"><img src="" alt="metabo"></a></li>
+        <li class="popular-producers-items"><a href="#"><img src="img/bosch.png" alt="BOSCH"></a></li>
+        <li class="popular-producers-items"><a href="#"><img src="img/Makita.png" alt="makita"></a></li>
+        <li class="popular-producers-items"><a href="#"><img src="img/DeWALT.png" alt="dewalt"></a></li>
+        <li class="popular-producers-items"><a href="#"><img src="img/Интерскол.png" alt="интерскол"></a></li>
+        <li class="popular-producers-items"><a href="#"><img src="img/Hitachi.png" alt="hitachi"></a></li>
+        <li class="popular-producers-items"><a href="#"><img src="img/LG.png" alt="LG"></a></li>
+        <li class="popular-producers-items"><a href="#"><img src="img/AEG.png" alt="AEG"></a></li>
+        <li class="popular-producers-items"><a href="#"><img src="img/Metabo.png" alt="metabo"></a></li>
       </ul>
     </section>
     <section>
@@ -174,7 +179,7 @@
       <div class="contacts">
         <h4>Контакты</h4>
         <p>Вы можете забрать товар сами, заехав в наш офис:</p>
-        <img src="map.png" alt="Место расположения">
+        <img src="img/map.png" alt="Место расположения">
         <a href="#">Заблудились? Напишите нам!</a>
       </div>
     </section>
