Подготовил графику для учебного проекта

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <li class="popular-producers-items"><a href="#"><img src="img/DeWALT.png" alt="dewalt"></a></li>
         <li class="popular-producers-items"><a href="#"><img src="img/Интерскол.png" alt="интерскол"></a></li>
         <li class="popular-producers-items"><a href="#"><img src="img/Hitachi.png" alt="hitachi"></a></li>
-        <li class="popular-producers-items"><a href="#"><img src="img/LG.png" alt="LG"></a></li>
+        <li class="popular-producers-items"><a href="#"><img src="img/lg.png" alt="LG"></a></li>
         <li class="popular-producers-items"><a href="#"><img src="img/AEG.png" alt="AEG"></a></li>
         <li class="popular-producers-items"><a href="#"><img src="img/Metabo.png" alt="metabo"></a></li>
       </ul>
